<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/app.com.example.android.sunshine">

    <app.com.example.android.sunshine.LocationEditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/location_input"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        custom:minLength="3"
        android:id="@+id/customViewTextPref">
    </app.com.example.android.sunshine.LocationEditTextPreference>

    <ListPreference
        android:key="@string/pref_temp_units_key"
        android:title="@string/pref_temp_units_title"
        android:defaultValue="@string/pref_temp_units_default"
        android:entries="@array/tempUnits"
        android:entryValues="@array/tempUnitsValues">
    </ListPreference>

    <CheckBoxPreference
        android:key = "@string/pref_enable_notification_key"
        android:title="@string/pref_enable_notification_label"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default">
    </CheckBoxPreference>

</PreferenceScreen>
<!--
<EditTextPreference
android:key="@string/pref_location_key"
android:title="@string/location_input"
android:defaultValue="@string/pref_location_default"
android:inputType="text">
</EditTextPreference>-->
