<?xml version="1.0" encoding="utf-8"?>

<!--
     Copyright (C) 2015 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<!-- Master layout. -->


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/detail_today_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/detail_additional_pane"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        app:columnCount="2"
        android:background="@color/detail_accent_pane_background"
        android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingLeft="@dimen/forecast_detail_horizontal_padding"
        android:paddingStart="@dimen/forecast_detail_horizontal_padding"
        android:paddingRight="@dimen/forecast_detail_horizontal_padding"
        android:paddingEnd="@dimen/forecast_detail_horizontal_padding">

        <TextView
            android:id="@+id/detail_humidity_label_textview"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/humidity"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/item_humidity"
            android:gravity="center_vertical"
            tools:text="38%"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            app:layout_gravity="fill"/>

        <TextView
            android:id="@+id/detail_pressure_label_textview"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/pressure"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/item_pressure"
            android:gravity="center_vertical"
            tools:text="995 hPa"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            app:layout_gravity="fill"/>

        <TextView
            android:id="@+id/detail_wind_label_textview"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/wind"
            android:textColor="@color/detail_accent_label"
            android:textSize="20sp"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />


        <TextView
            android:id="@+id/item_wind"
            android:gravity="center_vertical"
            tools:text="4km/h NW"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            app:layout_gravity="fill" />
    </android.support.v7.widget.GridLayout>

</LinearLayout>






    <!--
    <?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="app.com.example.android.sunshine.DetailActivity">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/item_date"
                android:textSize="24sp"
                android:fontFamily="sans-serif-condensed"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/item_day"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:layout_gravity="left" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contextClickable="false"
            android:weightSum="1"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textSize="96sp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/item_high_temp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textSize="48sp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/item_low_temp"
                    android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/image_icon"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="22sp"
                    android:id="@+id/item_desc"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textSize="22sp"
                android:id="@+id/item_humidity"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textSize="22sp"
                android:id="@+id/item_wind"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textSize="22sp"
                android:id="@+id/item_pressure"
                android:layout_gravity="left" />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>



    -->




